Agregue los botones de stilo

--- a/Jesus/jesus.html
+++ b/Jesus/jesus.html
@@ -11,10 +11,13 @@
         <a class="A1" href="/index.html">Menu</a>
         <br>
         <h1>Hector de Jesus de Paz Arbizu</h1>
+       
+        <center>
         <div class="caja-verde-limon"> 
-        <img width="100px" src="/img/jesus.jpg"/>
-        </div> 
-        <style>
+        <img width="200px" src="/img/jesus.jpg"/>
+        </div>
+        </center>
+            <style>
             h1 { font-family:Verdana
             }
             li { font-family: arial 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
