--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a class="a1" href="Jesus/jesus.html">Curriculum Jesus de Paz</a>
     <a class="a1" href="https://fir-cristian-chamo.web.app">Practica con FireBase</a>
     <a class="a1" href="Calculadora/calculadora.html">Calculadora</a>
-    <a class="a1" href="">Botones de CSS</a>
+    <a class="a1" href="/botones de estilo css/botones.html">Botones de CSS</a>
     <hr>
     <h2 data-text="PROYECTO FINAL..."></h2>
     
