Modifique el css de los botones

--- a/botones de estilo css/botones.html
+++ b/botones de estilo css/botones.html
@@ -7,6 +7,8 @@
 
   </head>
 <body>
+	<a class="A1" href="/index.html">Menu</a>
+	<br>
 	<div class="conteiner">
 
 	<h1>Ejemplo de botones con JavaScript :D</h1>
@@ -19,9 +21,8 @@
     <button onclick="cambiarFuente()">Cambiar fuente</button>
     <button onclick="cambiarFondo()">Cambiar fondo</button>
 
-	     <p id="cambiar-me">Aqui tambien</p>
-	     <div id="cambiar-otro">Aqui cambia de color</div>
-
+	     <p style="color:black" id="cambiar-me">Aqui cambiara de color :D</p>
+	     <div style="color:black"  id="cambiar-otro" >Tambien aqui :D</div>
 </body>
 <title>Cambiar el fondo de la página con JavaScript :D</title>
 	<script>
