Modifique unas cosas del html de los botones

--- a/botones de estilo css/botones.html
+++ b/botones de estilo css/botones.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
-     <head>
-    
-	<title>Proyecto que cambie los estilos de la pagina, color, tamaño y fondo.</title>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Estilos de la pagina, color, tamaño y fondo.</title>
     <link rel="stylesheet" href="/botones de estilo css/botones.css">
-
-  </head>
+</head>
 <body>
+	
 	<a class="A1" href="/index.html">Menu</a>
 	<br>
 	<div class="conteiner">
@@ -36,5 +38,6 @@
 	<p>Este es un párrafo de texto.</p>
 </div>
     <script src="/botones de estilo css/botones.js"></script> 
+	
  </body>
 </html>
