--- a/botones de estilo css/botones.html
+++ b/botones de estilo css/botones.html
@@ -22,6 +22,7 @@
 	<button onclick="cambiarEstilo3()">Estilo 3</button>
     <button onclick="cambiarFuente()">Cambiar fuente</button>
     <button onclick="cambiarFondo()">Cambiar fondo</button>
+	<button onclick="resetear(1)">Regresar a pagina original</button>
 
 	     <p style="color:black" id="cambiar-me">Aqui cambiara de color :D</p>
 	     <div style="color:black"  id="cambiar-otro" >Tambien aqui :D</div>
@@ -38,6 +39,6 @@
 	<p>Este es un párrafo de texto.</p>
 </div>
     <script src="/botones de estilo css/botones.js"></script> 
-	
+
  </body>
 </html>
