Agregue una carpeta nueva

--- a/Jesus/jesus.html
+++ b/Jesus/jesus.html
@@ -88,7 +88,7 @@
       
         <ol>
            <li><a target="_blank"
-         href="https://instagram.com/h_depaz.m?igshid=7DdkNTZiNTM=ZbwKwL" > <img src="/img/Instagram_logo_2022.jpg"" alt=""></a></li>
+         href="https://instagram.com/h_depaz.m?igshid=7DdkNTZiNTM=ZbwKwL" > <img src="/img/Instagram_logo_2022.jpg" alt=""></a></li>
 
          <li><a target="blank"  
          href="https://www.facebook.com/hector.depaz.37?mibextid=ZbWKwL"> <img src="/img/fb_icon.jpg" alt=""></a></li>
