--- a/Calculadora/calculadora.html
+++ b/Calculadora/calculadora.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Claculadora</title>
-    <link href="stylesC.css" rel="stylesheet">
+    <link href="/Calculadora/stylesC.css" rel="stylesheet">
 </head>
 <body>
     <a class="A1" href="/index.html">Menu</a>
