--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Final de Introducción</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet">
 </head>
 <body>
     <div>
     <h1>Menu</h1>
     <br>
     <hr>
-    <a class="a1" href="Cristisn/cristian.html">Curriculum Cristian Chamo</a>
-    <a class="a1" href="Jesus/jesus.html">Curriculum Jesus de Paz</a>
-    <a class="a1" href="https://fir-cristian-chamo.web.app">Practica con FireBase</a>
-    <a class="a1" href="Calculadora/calculadora.html">Calculadora</a>
+    <a class="a1" href="/Cristisn/cristian.html">Curriculum Cristian Chamo</a>
+    <a class="a1" href="/Jesus/jesus.html">Curriculum Jesus de Paz</a>
+    <a class="a1" href="/Firebase/firebase.html">Practica con FireBase</a>
+    <a class="a1" href="/Calculadora/calculadora.html">Calculadora</a>
     <a class="a1" href="/botones de estilo css/botones.html">Botones de CSS</a>
     <hr>
     <h2 data-text="PROYECTO FINAL..."></h2>
