--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <hr>
     <a class="a1" href="/Cristisn/cristian.html">Curriculum Cristian Chamo</a>
     <a class="a1" href="/Jesus/jesus.html">Curriculum Jesus de Paz</a>
-    <a class="a1" href="/Firebase/firebase.html">Practica con FireBase</a>
+    <a class="a1" href="https://demonintro.web.app" target="_blank">Practica con FireBase</a>
     <a class="a1" href="/Calculadora/calculadora.html">Calculadora</a>
     <a class="a1" href="/botones de estilo css/botones.html">Botones de CSS</a>
     <hr>
